--- a/src/app/tracking-purchase/tracking-purchase.page.html
+++ b/src/app/tracking-purchase/tracking-purchase.page.html
@@ -16,8 +16,8 @@
 <ion-footer>
   <ion-toolbar>
     <div style="overflow-y: auto;height: 200px;margin-top:20px">
-      <ion-list *ngIf="trackingRequest">
-        <ion-item >
+      <ion-list *ngIf="trackingRequest && request">
+        <ion-item>
           <ion-label>
             <h4>Solicitud creada</h4>
             <p>{{request.created_datetime.toDate() | date:'shortTime'}}</p>
@@ -30,10 +30,10 @@
             <p>{{trackingRequest.accepted_datetime.toDate() | date:'shortTime'}}</p>
           </ion-label>
         </ion-item>
-        <ion-item *ngIf="trackingRequest.received">
+        <ion-item *ngIf="trackingRequest.bought">
           <ion-label>
-            <h4>Productos recibidos</h4>
-            <p>{{trackingRequest.received_datetime.toDate() | date:'shortTime'}}</p>
+            <h4>Productos comprados</h4>
+            <p>{{trackingRequest.bought_datetime.toDate() | date:'shortTime'}}</p>
           </ion-label>
         </ion-item>
         <ion-item *ngIf="trackingRequest.delivered">
