correccion en el mapa de los seguimientos

--- a/src/app/tracking-courier-messaging/tracking-courier-messaging.page.html
+++ b/src/app/tracking-courier-messaging/tracking-courier-messaging.page.html
@@ -16,7 +16,7 @@
 <ion-footer>
   <ion-toolbar>
     <div style="overflow-y: auto;height: 200px;margin-top:20px">
-      <ion-list *ngIf="trackingRequest">
+      <ion-list *ngIf="trackingRequest && request">
         <ion-item>
           <ion-label>
             <h4>Solicitud creada</h4>
