actualizacion de componente

--- a/src/app/principal/principal.page.html
+++ b/src/app/principal/principal.page.html
@@ -15,7 +15,7 @@
       <ion-button (click)="openRhinoceros()">3</ion-button>
     </div>
     <div>
-      <ion-button >4</ion-button>
+      <ion-button (click)="openConfigSupport()">4</ion-button>
     </div>
   </div>
 </ion-content>
