--- a/src/app/config-support/config-support.page.html
+++ b/src/app/config-support/config-support.page.html
@@ -1,5 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
     <ion-title>
       Configuracion y Soporte
     </ion-title>
@@ -7,31 +10,32 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-list>
-    <ion-item class="not-border">
-      <ion-label (click)="openInfoAccount()">
-        Informacion de Cuenta
-      </ion-label>
+  <form [formGroup]="pqrsForm" (ngSubmit)="sendPqrs()">
+    <ion-item>
+      <ion-label position="floating">Titulo</ion-label>
+      <ion-input formControlName="title"></ion-input>
     </ion-item>
-    <ion-item class="not-border">
-      <ion-label (click)="openInfoEstablishment()">
-        Informacion de Empresa
-      </ion-label>
+    <div *ngIf="title.invalid && (title.dirty || title.touched)" class="alert alert-danger">
+      <div *ngIf="title.errors?.['required']" class="errors">
+        Titulo requerido
+      </div>
+      <div *ngIf="title.errors?.['pattern']" class="errors">
+        Titulo errado
+      </div>
+    </div>
+    <ion-item>
+      <ion-label position="floating">Descripcion</ion-label>
+      <ion-textarea formControlName="description"></ion-textarea>
     </ion-item>
-    <ion-item class="not-border">
-      <ion-label>
-        Notificaciones
-      </ion-label>
-    </ion-item>
-    <ion-item class="not-border">
-      <ion-label (click)="openContact()">
-        Contacto
-      </ion-label>
-    </ion-item>
-    <ion-item class="border">
-      <ion-label (click)="logout()">
-        Cerrar sesion
-      </ion-label>
-    </ion-item>
-  </ion-list>
+    <div *ngIf="description.invalid && (description.dirty || description.touched)" class="alert alert-danger">
+      <div *ngIf="description.errors?.['required']" class="errors">
+        Descripcion requerida
+      </div>
+      <div *ngIf="description.errors?.['pattern']" class="errors">
+        Descripcion errada
+      </div>
+    </div>
+    <br>
+    <ion-button type="submit" expand="full" >Enviar</ion-button>
+  </form>
 </ion-content>
