--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,25 @@
 <ion-app>
+  <ion-header>
+    <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-button color="primary" (click)="back()">
+          <ion-icon slot="icon-only" name="arrow-back"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+      <div *ngIf="showProfile">
+        Perfil
+      </div>
+    </ion-toolbar>
+  </ion-header>
   <ion-router-outlet></ion-router-outlet>
+  <ion-tabs *ngIf="showTabs">
+    <ion-tab-bar slot="bottom">
+      <ion-tab-button tab="principal">
+        <ion-icon name="triangle"></ion-icon>
+      </ion-tab-button>
+      <ion-tab-button tab="notifications">
+        <ion-icon name="ellipse"></ion-icon>
+      </ion-tab-button>
+    </ion-tab-bar>
+  </ion-tabs>
 </ion-app>
-
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
