--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,15 +1,16 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Home
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Home</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <div style="text-align: center;margin-top:10px">
+    <div>
+      <h3>¿Que quieres hacer?</h3>
+    </div>
+    <br>
+    <div>
+      <ion-button >1</ion-button>
+      <ion-button (click)="openTypeService()">2</ion-button>
+      <ion-button (click)="openRhinoceros()">3</ion-button>
+    </div>
+    <div>
+      <ion-button (click)="openConfigSupport()">4</ion-button>
+    </div>
+  </div>
 </ion-content>
