--- a/src/app/principal/principal.page.html
+++ b/src/app/principal/principal.page.html
@@ -1,5 +1,10 @@
 <ion-content>
-  <div style="text-align: center;margin-top:10px">
+  <div id="btn-perfil">
+    <ion-button size="small">
+      <ion-icon name="person"></ion-icon>
+    </ion-button>
+  </div>
+  <div style="text-align: center;">
     <div>
       <h3>¿Que quieres hacer?</h3>
     </div>
