--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
         </ion-button>
       </ion-buttons>
       <ion-buttons slot="end" *ngIf="showProfile">
-        <ion-button size="small" item-end (click)="openEditUserInfo">
+        <ion-button size="small" item-end (click)="presentActionSheet()">
           <ion-icon name="person" ></ion-icon>
         </ion-button>
       </ion-buttons>
