cambio de tipo de retorno de funcion

--- a/src/app/welcome/welcome.page.html
+++ b/src/app/welcome/welcome.page.html
@@ -1,4 +1,7 @@
 <ion-content>
-  <ion-button (click)="openLogin()">Iniciar Sesion</ion-button>
-  <ion-button (click)="openRegister()">Registrarse</ion-button>
+  <div style="margin-top:80px;">
+    <ion-button (click)="openLogin()">Iniciar Sesion</ion-button>
+    <ion-button (click)="openRegister()">Registrarse</ion-button>
+  </div>
+
 </ion-content>
