--- a/src/app/edit-profile/edit-profile.page.html
+++ b/src/app/edit-profile/edit-profile.page.html
@@ -1,12 +1,4 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
-    </ion-buttons>
-    <ion-title>Editar perfil</ion-title>
-  </ion-toolbar>
-</ion-header>
-
+<app-header [showBack]="false" [showConfig]="true"></app-header>
 <ion-content>
   <form [formGroup]="profileForm" (ngSubmit)="update()">
     <ion-item>
