--- a/src/app/courier-messaging/courier-messaging.page.html
+++ b/src/app/courier-messaging/courier-messaging.page.html
@@ -1,14 +1,4 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
-    </ion-buttons>
-    <ion-title>
-      Mensajeria y Paqueteria
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
+<app-header [showBack]="true" [showConfig]="true" urlBack="principal/type-service"></app-header>
 <ion-content>
   <form [formGroup]="requestForm" (ngSubmit)="register()">
     <ion-item>
