--- a/src/app/edit-profile/edit-profile.page.html
+++ b/src/app/edit-profile/edit-profile.page.html
@@ -1,4 +1,4 @@
-<app-header [showBack]="false" [showConfig]="true"></app-header>
+<app-header [showBack]="false" [showConfig]="true" [urlBack]="null"></app-header>
 <ion-content>
   <form [formGroup]="profileForm" (ngSubmit)="update()">
     <ion-item>
