--- a/src/app/principal/principal.page.html
+++ b/src/app/principal/principal.page.html
@@ -1,4 +1,4 @@
-<app-header [showBack]="false" [showConfig]="true"></app-header>
+<app-header [showBack]="false" [showConfig]="true" [urlBack]="null"></app-header>
 <ion-content>
   <div style="text-align: center;">
     <div>
