cambio de headeren todas las paginas

--- a/src/app/edit-account/edit-account.page.html
+++ b/src/app/edit-account/edit-account.page.html
@@ -1,4 +1,4 @@
-<app-header [showBack]="false" [showConfig]="true" urlBack="null"></app-header>
+<app-header [showBack]="false" [showConfig]="true" [urlBack]="null"></app-header>
 <ion-content>
   <form [formGroup]="accountForm" (ngSubmit)="update()">
     <ion-item>
