--- a/src/app/purchase/purchase.page.html
+++ b/src/app/purchase/purchase.page.html
@@ -1,13 +1,4 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
-    </ion-buttons>
-    <ion-title>
-      Compras
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header [showBack]="true" [showConfig]="true" urlBack="principal/type-service"> </app-header>
 
 <ion-content>
   <form [formGroup]="requestForm" (ngSubmit)="register()">
