--- a/src/app/tracking-courier-messaging/tracking-courier-messaging.page.html
+++ b/src/app/tracking-courier-messaging/tracking-courier-messaging.page.html
@@ -1,11 +1,4 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
-    </ion-buttons>
-    <ion-title>Seguimiento de Solicitud</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header [showBack]="true" [showConfig]="false" urlBack="principal"></app-header>
 
 <ion-content [fullscreen]="true">
   <div id="map">
