--- a/src/app/type-service/type-service.page.html
+++ b/src/app/type-service/type-service.page.html
@@ -1,3 +1,4 @@
+<app-header [showBack]="true" [showConfig]="true" urlBack="principal"></app-header>
 <ion-content>
   <div class="">
     <ion-item>
