--- a/src/app/shared/header/header.page.html
+++ b/src/app/shared/header/header.page.html
@@ -1,15 +1,29 @@
 <ion-header>
   <ion-toolbar>
-    <ion-buttons slot="start" *ngIf="showBack">
-      <ion-button (click)="back()">
-        <ion-icon slot="icon-only" name="arrow-back"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-    <ion-buttons slot="end" *ngIf="showConfig">
-      <ion-button (click)="presentActionSheet()">
-        <ion-icon slot="icon-only" name="person" ></ion-icon>
-      </ion-button>
-    </ion-buttons>
-    <!-- <img src="assets/img/logo_purple.png"> -->
+    <ion-row>
+      <ion-col size="2">
+        <div *ngIf="showBack">
+          <ion-buttons>
+            <ion-button (click)="back()">
+              <ion-icon slot="icon-only" name="arrow-back"></ion-icon>
+            </ion-button>
+          </ion-buttons>
+        </div>
+      </ion-col>
+      <ion-col>
+        <div id="logo">
+          <ion-img src="assets/img/shared/logo_purple.png"></ion-img>
+        </div>
+      </ion-col>
+      <ion-col size="2">
+        <div id="profile" *ngIf="showConfig">
+          <ion-buttons>
+            <ion-button (click)="presentActionSheet()">
+              <ion-img src="assets/img/shared/perfil-01.png"></ion-img>
+            </ion-button>
+          </ion-buttons>
+        </div>
+      </ion-col>
+    </ion-row>
   </ion-toolbar>
 </ion-header>
