adicion de estilo en tabs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,14 @@
   <ion-router-outlet></ion-router-outlet>
   <ion-tabs *ngIf="showTabs">
     <ion-tab-bar slot="bottom">
-      <ion-tab-button tab="principal">
-        <ion-icon name="triangle"></ion-icon>
-      </ion-tab-button>
       <ion-tab-button tab="notifications">
-        <ion-icon name="ellipse"></ion-icon>
+        <ion-img src="assets/img/shared/notificacionesolo-01.png"></ion-img>
+      </ion-tab-button>
+      <ion-tab-button tab="principal">
+        <ion-img src="assets/img/shared/homesolo-01.png"></ion-img>
+      </ion-tab-button>
+      <ion-tab-button tab="request-history">
+        <ion-img src="assets/img/shared/pedidossolo-01.png"></ion-img>
       </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
