--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,37 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+.title-purple{
+  width: 245px;
+  height: 37px;
+  margin: 0 auto;
+  background-color: var(--ion-color-tertiary);
+  border-radius: 20px;
+  text-align: center;
+}
+
+.title-purple h6{
+  color: white;
+  position: relative;
+  padding-top: 8px;
+}
+
+.title-white{
+  width: 245px;
+  height: 37px;
+  margin: 0 auto;
+  background-color: white;
+  border-radius: 20px;
+  border: 1px;
+  border-style: solid;
+  border-color: var(--ion-color-medium);
+  text-align: center;
+}
+
+.title-white h5{
+  color: var(--ion-color-medium);
+  margin-top: 5px;
+  position: relative;
+  font-weight: bold;
+}
