--- a/src/app/principal/principal.page.html
+++ b/src/app/principal/principal.page.html
@@ -1,7 +1,7 @@
 <app-header [showBack]="false" [showConfig]="true" [urlBack]="null"></app-header>
 
 <ion-content>
-    <div class="title-purple">
+    <div class="title-tertiary">
       <h6>¿Que quieres hacer?</h6>
     </div>
     <br>
