--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,12 +1,5 @@
-
-#logo{
-  width: 340px;
-  height: 118px;
-  margin-top: 10%;
-}
-
 form{
-  margin: top 5px;
+  margin-top: 5px;
   padding-left: 20px;
   padding-right: 20px;
 }
