--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -33,4 +33,12 @@
 	--ion-color-medium-contrast-rgb: 255,255,255;
 	--ion-color-medium-shade: #505054;
 	--ion-color-medium-tint: #6b6b6f;
+
+  /** rojos **/
+  --ion-color-danger: #eb445a;
+	--ion-color-danger-rgb: 235,68,90;
+	--ion-color-danger-contrast: #ffffff;
+	--ion-color-danger-contrast-rgb: 255,255,255;
+	--ion-color-danger-shade: #cf3c4f;
+	--ion-color-danger-tint: #ed576b;
 }
