--- a/src/app/config-support/config-support.page.scss
+++ b/src/app/config-support/config-support.page.scss
@@ -1,7 +1,44 @@
-.not-border{
-  --inner-border-width: 0 !important;
+form{
+  margin-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
-.border{
-  --inner-border-width: 1px 0px 0px 0;
+#title{
+  color: var(--ion-color-medium);
+}
+
+#title h5{
+  text-align: center;
+}
+
+#title p{
+  font-size: 13px;
+}
+
+ion-item{
+  --background: #e9e9ea;
+  --color: #bcbdc3;
+  --border-style: none;
+}
+
+.errors{
+  margin-top: 5px;
+}
+
+.errors ion-note{
+  --color: var(--ion-color-danger);
+}
+
+#img-sobre{
+  width: 28px;
+  height: 28px;
+  margin-top: 12px;
+  margin-right: 15px;
+}
+
+#img-lapiz{
+  width: 20px;
+  height: 20px;
+  margin-right: 15px;
 }
