adicion de colores en el tema y cambios de estilos en los componentes respectos de esos colores

--- a/src/app/edit-profile/edit-profile.page.scss
+++ b/src/app/edit-profile/edit-profile.page.scss
@@ -6,7 +6,7 @@ form{
 
 ion-item{
   --background: white;
-  --color: black;
+  --color: var(--ion-color-gray-1);
   --border-color: var(--ion-color-tertiary);
   --highlight-color-focused: var(--ion-color-tertiary);
   --highlight-color-valid: var(--ion-color-tertiary);
