--- a/src/app/config-support/config-support.page.html
+++ b/src/app/config-support/config-support.page.html
@@ -1,4 +1,4 @@
-<app-header [showBack]="false" [showConfig]="true" [urlBack]="null"></app-header>
+<app-header [showBack]="true" [showConfig]="true" urlBack="principal"></app-header>
 <ion-content [fullscreen]="true">
   <form [formGroup]="pqrsForm" (ngSubmit)="sendPqrs()">
     <div id="title">
