--- a/src/app/config-support/config-support.page.scss
+++ b/src/app/config-support/config-support.page.scss
@@ -5,10 +5,10 @@ form{
 }
 
 #title{
-  color: var(--ion-color-medium);
+  color: var(--ion-color-gray-3);
 }
 
-#title h5{
+#title h6{
   text-align: center;
 }
 
@@ -17,8 +17,8 @@ form{
 }
 
 ion-item{
-  --background: #e9e9ea;
-  --color: #bcbdc3;
+  --background: var(--ion-color-gray-5);
+  --color: var(--ion-color-gray-4);
   --border-style: none;
 }
 
@@ -31,9 +31,9 @@ ion-item{
 }
 
 #img-sobre{
-  width: 28px;
-  height: 28px;
-  margin-top: 12px;
+  width: 26px;
+  height: 26px;
+  margin-top: 7px;
   margin-right: 15px;
 }
 
