modificacion de estilos de los titulos y cambio de tamaño de fuente en inputs

--- a/src/app/edit-profile/edit-profile.page.html
+++ b/src/app/edit-profile/edit-profile.page.html
@@ -2,7 +2,7 @@
 
 <ion-content>
   <div class="title-tertiary">
-    <h6>Editar Perfil</h6>
+    <p>Editar Perfil</p>
   </div>
   <form [formGroup]="profileForm" (ngSubmit)="update()">
     <ion-item lines="none">
