--- a/src/app/principal/principal.page.html
+++ b/src/app/principal/principal.page.html
@@ -2,7 +2,7 @@
 
 <ion-content>
     <div class="title-tertiary">
-      <h6>¿Que quieres hacer?</h6>
+      <p>¿Que quieres hacer?</p>
     </div>
     <br>
     <div id="options">
