--- a/src/app/courier-messaging/courier-messaging.page.html
+++ b/src/app/courier-messaging/courier-messaging.page.html
@@ -1,8 +1,11 @@
 <app-header [showBack]="true" [showConfig]="true" urlBack="principal/type-service"></app-header>
 <ion-content>
+  <div class="title-white">
+    <p>Paqueteria y Mensajeria</p>
+  </div>
   <form [formGroup]="requestForm" (ngSubmit)="register()">
     <ion-item>
-      <ion-select placeholder="Ciudad recogida" formControlName="cityReceived">
+      <ion-select placeholder="Ciudad recibida" formControlName="cityReceived">
         <div *ngFor="let city of cities">
           <ion-select-option [value]="city.c_digo_dane_del_municipio">{{city.departamento}} - {{city.municipio}}</ion-select-option>
         </div>
@@ -13,9 +16,9 @@
         Ciudad requerida
       </div>
     </div>
+    <br>
     <ion-item>
-      <ion-label position="floating">Direccion recogida</ion-label>
-      <ion-input formControlName="addressReceived"></ion-input>
+      <ion-input formControlName="addressReceived" placeholder="Direccion recibida"></ion-input>
     </ion-item>
     <div *ngIf="addressReceived.invalid && (addressReceived.dirty || addressReceived.touched)" class="alert alert-danger">
       <div *ngIf="addressReceived.errors?.['required']" class="errors">
@@ -25,9 +28,9 @@
         Direccion errada
       </div>
     </div>
+    <br>
     <ion-item>
-      <ion-label position="floating">Celular recogida</ion-label>
-      <ion-input type="number" formControlName="cellphoneReceived"></ion-input>
+      <ion-input type="number" formControlName="cellphoneReceived" placeholder="Celular recibida"></ion-input>
     </ion-item>
     <div *ngIf="cellphoneReceived.invalid && (cellphoneReceived.dirty || cellphoneReceived.touched)" class="alert alert-danger">
       <div *ngIf="cellphoneReceived.errors?.['required']" class="errors">
@@ -37,6 +40,7 @@
         Celular errado
       </div>
     </div>
+    <br>
     <ion-item>
       <ion-select placeholder="Ciudad entrega" formControlName="cityDelivered">
         <div *ngFor="let city of cities">
@@ -49,9 +53,9 @@
         Ciudad requerida
       </div>
     </div>
+    <br>
     <ion-item>
-      <ion-label position="floating">Direccion entrega</ion-label>
-      <ion-input formControlName="addressDelivered"></ion-input>
+      <ion-input formControlName="addressDelivered" placeholder="Direccion entrega"></ion-input>
     </ion-item>
     <div *ngIf="addressDelivered.invalid && (addressDelivered.dirty || addressDelivered.touched)" class="alert alert-danger">
       <div *ngIf="addressDelivered.errors?.['required']" class="errors">
@@ -61,9 +65,9 @@
         Direccion errada
       </div>
     </div>
+    <br>
     <ion-item>
-      <ion-label position="floating">Celular entrega</ion-label>
-      <ion-input type="number" formControlName="cellphoneDelivered"></ion-input>
+      <ion-input type="number" formControlName="cellphoneDelivered" placeholder="Celular entrega"></ion-input>
     </ion-item>
     <div *ngIf="cellphoneDelivered.invalid && (cellphoneDelivered.dirty || cellphoneDelivered.touched)" class="alert alert-danger">
       <div *ngIf="cellphoneDelivered.errors?.['required']" class="errors">
@@ -73,9 +77,9 @@
         Celular errado
       </div>
     </div>
+    <br>
     <ion-item>
-      <ion-label position="floating">¿Que contiene?</ion-label>
-      <ion-input formControlName="content"></ion-input>
+      <ion-input formControlName="content" placeholder="¿Que contiene?"></ion-input>
     </ion-item>
     <div *ngIf="content.invalid && (content.dirty || content.touched)" class="alert alert-danger">
       <div *ngIf="content.errors?.['required']" class="errors">
@@ -83,6 +87,6 @@
       </div>
     </div>
     <br>
-    <ion-button expand="full" type="submit">Solicitar Servicio</ion-button>
+    <ion-button shape="round" type="submit" expand="block"  type="submit">Solicitar Servicio</ion-button>
   </form>
 </ion-content>
