--- a/src/app/courier-messaging/courier-messaging.page.scss
+++ b/src/app/courier-messaging/courier-messaging.page.scss
@@ -5,7 +5,17 @@
 }
 
 form{
-  margin: top 5px;
+  margin-top: 20px;
   padding-left: 20px;
   padding-right: 20px;
+}
+
+ion-item{
+  --background: var(--ion-color-gray-5);
+  --border-style: none;
+}
+
+.title-white{
+  width: 216px;
+  margin-top: 12px;
 }
