modificacion estilos y cambio de color global de los ion-items

--- a/src/global.scss
+++ b/src/global.scss
@@ -65,6 +65,7 @@ ion-item{
   --border-width: 2px;
   --border-radius: 20px;
   --border-width: 0.55px 0.55px 0.55px 0.55px;
+  --color: var(--ion-color-gray-1);
   font-size: 13px;
 }
 
