--- a/src/app/edit-profile/edit-profile.page.scss
+++ b/src/app/edit-profile/edit-profile.page.scss
@@ -1,12 +1,15 @@
+ion-content{
+  --padding-top:  20px;
+  --padding-start: 20px;
+  --padding-end: 20px;
+}
+
 form{
   margin-top: 20px;
-  padding-left: 20px;
-  padding-right: 20px;
 }
 
 ion-item{
   --background: white;
-  --color: var(--ion-color-gray-1);
   --border-color: var(--ion-color-tertiary);
   --highlight-color-focused: var(--ion-color-tertiary);
   --highlight-color-valid: var(--ion-color-tertiary);
