--- a/src/app/config-support/config-support.page.scss
+++ b/src/app/config-support/config-support.page.scss
@@ -1,7 +1,7 @@
-form{
-  margin-top: 20px;
-  padding-left: 20px;
-  padding-right: 20px;
+ion-content{
+  --padding-top:  20px;
+  --padding-start: 20px;
+  --padding-end: 20px;
 }
 
 #title{
@@ -16,6 +16,10 @@ form{
   font-size: 13px;
 }
 
+form{
+  margin-top: 20px;
+}
+
 ion-item{
   --background: var(--ion-color-gray-5);
   --border-style: none;
@@ -27,17 +31,15 @@ ion-item{
 
 .errors ion-note{
   --color: var(--ion-color-danger);
+  font-size: 13px;
+}
+
+ion-item img{
+  width: 23px;
+  height: 23px;
+  margin-right: 13px;
 }
 
 #img-sobre{
-  width: 26px;
-  height: 26px;
   margin-top: 7px;
-  margin-right: 15px;
-}
-
-#img-lapiz{
-  width: 20px;
-  height: 20px;
-  margin-right: 15px;
 }
