modificacion html y estilos en mensajeria y paqueteria

--- a/src/app/config-support/config-support.page.html
+++ b/src/app/config-support/config-support.page.html
@@ -1,5 +1,5 @@
 <app-header [showBack]="true" [showConfig]="true" urlBack="principal"></app-header>
-<ion-content [fullscreen]="true">
+<ion-content>
   <div id="title">
     <h6><b>Contactar con soporte</b></h6>
     <p>
