--- a/src/app/courier-messaging/courier-messaging.page.scss
+++ b/src/app/courier-messaging/courier-messaging.page.scss
@@ -1,13 +1,15 @@
-.errors{
-  font-size: 13px;
-  margin-top: 6px;
-  color: red;
+ion-content{
+  --padding-top:  20px;
+  --padding-start: 20px;
+  --padding-end: 20px;
+}
+
+.title-white{
+  width: 216px;
 }
 
 form{
   margin-top: 20px;
-  padding-left: 20px;
-  padding-right: 20px;
 }
 
 ion-item{
@@ -15,7 +17,17 @@ ion-item{
   --border-style: none;
 }
 
-.title-white{
-  width: 216px;
-  margin-top: 12px;
+ion-item img{
+  width: 23px;
+  height: 23px;
+  margin-right: 13px;
+}
+
+.errors{
+  margin-top: 5px;
+}
+
+.errors ion-note{
+  --color: var(--ion-color-danger);
+  font-size: 13px;
 }
