--- a/src/app/rhinoceros/rhinoceros.page.html
+++ b/src/app/rhinoceros/rhinoceros.page.html
@@ -1,89 +1,100 @@
 <app-header [showBack]="true" [showConfig]="true" urlBack="principal"></app-header>
 
 <ion-content>
+  <div class="title-white">
+    <p>Rinoceronte DeUan</p>
+  </div>
   <form [formGroup]="requestForm" (ngSubmit)="register()">
     <ion-item>
+      <img src="assets/img/shared/lapiz-01.png">
       <ion-select placeholder="Ciudad recogida" formControlName="cityReceived">
         <div *ngFor="let city of cities">
           <ion-select-option [value]="city.c_digo_dane_del_municipio">{{city.departamento}} - {{city.municipio}}</ion-select-option>
         </div>
       </ion-select>
     </ion-item>
-    <div *ngIf="cityReceived.invalid && (cityReceived.dirty || cityReceived.touched)" class="alert alert-danger">
+    <div *ngIf="cityReceived.invalid && (cityReceived.dirty || cityReceived.touched)">
       <div *ngIf="cityReceived.errors?.['required']" class="errors">
-        Ciudad requerida
+        <ion-note>Ciudad requerida</ion-note>
       </div>
     </div>
+    <br>
     <ion-item>
-      <ion-label position="floating">Direccion recogida</ion-label>
-      <ion-input formControlName="addressReceived"></ion-input>
+      <img src="assets/img/shared/lapiz-01.png">
+      <ion-input formControlName="addressReceived" placeholder="Direccion recogida"></ion-input>
     </ion-item>
-    <div *ngIf="addressReceived.invalid && (addressReceived.dirty || addressReceived.touched)" class="alert alert-danger">
+    <div *ngIf="addressReceived.invalid && (addressReceived.dirty || addressReceived.touched)">
       <div *ngIf="addressReceived.errors?.['required']" class="errors">
-        Direccion requerida
+        <ion-note>Direccion requerida</ion-note>
       </div>
       <div *ngIf="addressReceived.errors?.['pattern']" class="errors">
-        Direccion errada
+        <ion-note>Direccion errada</ion-note>
       </div>
     </div>
+    <br>
     <ion-item>
-      <ion-label position="floating">Celular recogida</ion-label>
-      <ion-input type="number" formControlName="cellphoneReceived"></ion-input>
+      <img src="assets/img/shared/lapiz-01.png">
+      <ion-input type="number" formControlName="cellphoneReceived" placeholder="Celular recogida"></ion-input>
     </ion-item>
-    <div *ngIf="cellphoneReceived.invalid && (cellphoneReceived.dirty || cellphoneReceived.touched)" class="alert alert-danger">
+    <div *ngIf="cellphoneReceived.invalid && (cellphoneReceived.dirty || cellphoneReceived.touched)" >
       <div *ngIf="cellphoneReceived.errors?.['required']" class="errors">
-        Celular requerido
+        <ion-note>Celular requerido</ion-note>
       </div>
       <div *ngIf="cellphoneReceived.errors?.['pattern']" class="errors">
-        Celular errado
+        <ion-note>Celular errado</ion-note>
       </div>
     </div>
+    <br>
     <ion-item>
+      <img src="assets/img/shared/lapiz-01.png">
       <ion-select placeholder="Ciudad entrega" formControlName="cityDelivered">
         <div *ngFor="let city of cities">
           <ion-select-option [value]="city.c_digo_dane_del_municipio">{{city.departamento}} - {{city.municipio}}</ion-select-option>
         </div>
       </ion-select>
     </ion-item>
-    <div *ngIf="cityDelivered.invalid && (cityDelivered.dirty || cityDelivered.touched)" class="alert alert-danger">
+    <div *ngIf="cityDelivered.invalid && (cityDelivered.dirty || cityDelivered.touched)">
       <div *ngIf="cityDelivered.errors?.['required']" class="errors">
-        Ciudad requerida
-      </div>
-    </div>
-    <ion-item>
-      <ion-label position="floating">Direccion entrega</ion-label>
-      <ion-input formControlName="addressDelivered"></ion-input>
-    </ion-item>
-    <div *ngIf="addressDelivered.invalid && (addressDelivered.dirty || addressDelivered.touched)" class="alert alert-danger">
-      <div *ngIf="addressDelivered.errors?.['required']" class="errors">
-        Direccion requerida
-      </div>
-      <div *ngIf="addressDelivered.errors?.['pattern']" class="errors">
-        Direccion errada
-      </div>
-    </div>
-    <ion-item>
-      <ion-label position="floating">Celular entrega</ion-label>
-      <ion-input type="number" formControlName="cellphoneDelivered"></ion-input>
-    </ion-item>
-    <div *ngIf="cellphoneDelivered.invalid && (cellphoneDelivered.dirty || cellphoneDelivered.touched)" class="alert alert-danger">
-      <div *ngIf="cellphoneDelivered.errors?.['required']" class="errors">
-        Celular requerido
-      </div>
-      <div *ngIf="cellphoneDelivered.errors?.['pattern']" class="errors">
-        Celular errado
-      </div>
-    </div>
-    <ion-item>
-      <ion-label position="floating">¿Que contiene?</ion-label>
-      <ion-input formControlName="content"></ion-input>
-    </ion-item>
-    <div *ngIf="content.invalid && (content.dirty || content.touched)" class="alert alert-danger">
-      <div *ngIf="content.errors?.['required']" class="errors">
-        Contenido requerido
+        <ion-note>Ciudad requerida</ion-note>
       </div>
     </div>
     <br>
-    <ion-button expand="full" type="submit">Solicitar Servicio</ion-button>
+    <ion-item>
+      <img src="assets/img/shared/lapiz-01.png">
+      <ion-input formControlName="addressDelivered" placeholder="Direccion entrega"></ion-input>
+    </ion-item>
+    <div *ngIf="addressDelivered.invalid && (addressDelivered.dirty || addressDelivered.touched)" class="alert alert-danger">
+      <div *ngIf="addressDelivered.errors?.['required']" class="errors">
+        <ion-note>Direccion requerida</ion-note>
+      </div>
+      <div *ngIf="addressDelivered.errors?.['pattern']" class="errors">
+        <ion-note>Direccion errada</ion-note>
+      </div>
+    </div>
+    <br>
+    <ion-item>
+      <img src="assets/img/shared/lapiz-01.png">
+      <ion-input type="number" formControlName="cellphoneDelivered" placeholder="Celular entrega"></ion-input>
+    </ion-item>
+    <div *ngIf="cellphoneDelivered.invalid && (cellphoneDelivered.dirty || cellphoneDelivered.touched)">
+      <div *ngIf="cellphoneDelivered.errors?.['required']" class="errors">
+        <ion-note>Celular requerido</ion-note>
+      </div>
+      <div *ngIf="cellphoneDelivered.errors?.['pattern']" class="errors">
+        <ion-note>Celular errado</ion-note>
+      </div>
+    </div>
+    <br>
+    <ion-item>
+      <img src="assets/img/shared/lapiz-01.png">
+      <ion-input formControlName="content" placeholder="¿Que contiene?"></ion-input>
+    </ion-item>
+    <div *ngIf="content.invalid && (content.dirty || content.touched)">
+      <div *ngIf="content.errors?.['required']" class="errors">
+        <ion-note>Contenido requerido</ion-note>
+      </div>
+    </div>
+    <br>
+    <ion-button shape="round" type="submit" expand="block">Solicitar Servicio</ion-button>
   </form>
 </ion-content>
